add eureka client